<?xml version="1.0" encoding="UTF-8"?>
<!--
    Copyright 2024 Mishmash IO UK Ltd.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.mishmash.test.stacks</groupId>
  <artifactId>test-storage-blocks-fs-base</artifactId>
  <version>1.0.0</version>

  <name>Modifications and extensions of Apache Hadoop, by mishmash io</name>
  <description>
    Apache ZooKeeper is a service for coordinating processes of distributed applications.

    This package contains Apache ZooKeeper as modified by mishmash io. For more info on the 
    specific modifications visit our website and github.

    It is recommended that you don't use this package directly, but rather - one of the 
    dependency-reduced client or server packages.
  </description>
  <url>https://mishmash.io/open_source/apache_big_data</url>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>

  <organization>
    <name>mishmash io</name>
    <url>https://mishmash.io</url>
  </organization>

  <scm>
    <connection>scm:git:https://github.com/mishmash-io/for-apache.git</connection>
    <developerConnection>scm:git:https://github.com/mishmash-io/for-apache.git</developerConnection>
    <url>https://github.com/mishmash-io/for-apache</url>
  </scm>

  <developers>
    <developer>
      <name>Ivan Kountchev</name>
      <email>i.kountchev@mishmash.io</email>
      <organization>mishmash io</organization>
      <organizationUrl>https://mishmash.io</organizationUrl>
      <roles>
        <role>developer</role>
      </roles>
    </developer>
    <developer>
      <name>Andrey Rusev</name>
      <email>a.rusev@mishmash.io</email>
      <url>www.linkedin.com/in/andrey-rusev-21894172</url>
      <organization>mishmash io</organization>
      <organizationUrl>https://mishmash.io</organizationUrl>
      <roles>
        <role>architect</role>
      </roles>
    </developer>
  </developers>

  <properties>
    <top.version>0.0.1</top.version>
    <hadoop.version>3.4.1-mmio.1</hadoop.version>

    <hadoop.common.build.dir>${project.build.directory}</hadoop.common.build.dir>
    <hadoop.log.dir>${project.build.directory}/log</hadoop.log.dir>
    <hadoop.tmp.dir>${project.build.directory}/tmp</hadoop.tmp.dir>
    <java.security.egd>file:///dev/urandom</java.security.egd>
    <test.build.dir>${project.build.directory}/test-dir</test.build.dir>
    <test.build.data>${test.build.dir}</test.build.data>
    <test.cache.data>${project.build.directory}/test-classes</test.cache.data>
    <test.build.webapps>${project.build.directory}/test-classes/webapps</test.build.webapps>

    <test.instrumentation.opts></test.instrumentation.opts>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.mishmash.stacks</groupId>
        <artifactId>distributed-computing-stacks</artifactId>
        <version>${top.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>io.mishmash.stacks.patches</groupId>
        <artifactId>hadoop-patches</artifactId>
        <version>${hadoop.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>      
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>jakarta.servlet</groupId>
      <artifactId>jakarta.servlet-api</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>jakarta.servlet.jsp</groupId>
      <artifactId>jakarta.servlet.jsp-api</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>jakarta.activation</groupId>
      <artifactId>jakarta.activation-api</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.glassfish.jaxb</groupId>
      <artifactId>jaxb-runtime</artifactId>
      <version>4.0.5</version>
      <scope>runtime</scope>
    </dependency>

    <!-- Updated to mishmash io minimal ZooKeeper -->
    <dependency>
      <groupId>io.mishmash.stacks.quorum</groupId>
      <artifactId>quorum-client</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.curator</groupId>
      <artifactId>curator-framework</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.curator</groupId>
      <artifactId>curator-recipes</artifactId>
    </dependency>

    <dependency>
      <groupId>org.wildfly.openssl</groupId>
      <artifactId>wildfly-openssl-java</artifactId>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.lz4</groupId>
      <artifactId>lz4-java</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.lmax</groupId>
      <artifactId>disruptor</artifactId>
      <version>4.0.0</version>
      <scope>runtime</scope>
    </dependency>

    <!-- test dependencies -->
    <dependency>
      <groupId>org.apache.ant</groupId>
      <artifactId>ant</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.kerby</groupId>
      <artifactId>kerb-simplekdc</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.wildfly.openssl</groupId>
      <artifactId>wildfly-openssl</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.squareup.okhttp3</groupId>
      <artifactId>mockwebserver3-junit5</artifactId>
    </dependency>
    <dependency>
      <groupId>org.mock-server</groupId>
      <artifactId>mockserver-netty</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.jetbrains.kotlin</groupId>
      <artifactId>kotlin-stdlib-jdk8</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.mishmash.stacks.patches</groupId>
      <artifactId>zookeeper-patches</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.mishmash.stacks.patches</groupId>
      <artifactId>zookeeper-patches</artifactId>
      <classifier>tests</classifier>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.curator</groupId>
      <artifactId>curator-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.directory.server</groupId>
      <artifactId>apacheds-core</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.directory.server</groupId>
      <artifactId>apacheds-protocol-ldap</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.directory.server</groupId>
      <artifactId>apacheds-ldif-partition</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.directory.api</groupId>
      <artifactId>api-ldap-codec-core</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.directory.api</groupId>
      <artifactId>api-ldap-model</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.directory.server</groupId>
      <artifactId>apacheds-server-integ</artifactId>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>log4j</groupId>
          <artifactId>log4j</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.apache.directory.server</groupId>
      <artifactId>apacheds-core-integ</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.sshd</groupId>
      <artifactId>sshd-core</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.sshd</groupId>
      <artifactId>sshd-sftp</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.ftpserver</groupId>
      <artifactId>ftpserver-core</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcpkix-jdk18on</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-console</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.codehaus.jettison</groupId>
      <artifactId>jettison</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>net.jcip</groupId>
      <artifactId>jcip-annotations</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>io.mishmash.stacks.patches</groupId>
      <artifactId>hadoop-patches</artifactId>
      <version>${hadoop.version}</version>
      <scope>test</scope>    
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.8.1</version>
        <executions>
          <execution>
            <id>unpack-patched-sources</id>
            <phase>process-test-classes</phase>
            <goals>
              <goal>unpack</goal>
            </goals>
            <configuration>
              <artifactItems>
                <artifactItem>
                  <groupId>io.mishmash.stacks.patches</groupId>
                  <artifactId>hadoop-patches</artifactId>
                  <version>${hadoop.version}</version>
                  <classifier>patched-sources</classifier>
                  <overWrite>true</overWrite>
                  <outputDirectory>${project.build.directory}/workdir</outputDirectory>
                </artifactItem>
              </artifactItems>
            </configuration>
          </execution>
          <execution>
            <id>unpack-tests</id>
            <phase>process-test-classes</phase>
            <goals>
              <goal>unpack</goal>
            </goals>
            <configuration>
              <artifactItems>
                <artifactItem>
                  <groupId>io.mishmash.stacks.patches</groupId>
                  <artifactId>hadoop-patches</artifactId>
                  <version>${hadoop.version}</version>
                  <classifier>tests</classifier>
                  <overWrite>true</overWrite>
                  <outputDirectory>${project.build.directory}/test-classes</outputDirectory>
                </artifactItem>
              </artifactItems>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-antrun-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
            <id>create-log-dir</id>
            <phase>process-test-resources</phase>
            <goals>
              <goal>run</goal>
            </goals>
            <configuration>
              <target>
                <!--
                TODO: there are tests (TestLocalFileSystem#testCopy) that fail if data
                TODO: from a previous run is present
                -->
                <delete dir="${test.build.data}"/>
                <mkdir dir="${test.build.data}"/>
                <mkdir dir="${hadoop.log.dir}"/>
              </target>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <release>21</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.0</version>
        <configuration>
          <redirectTestOutputToFile>true</redirectTestOutputToFile>
          <forkCount>1</forkCount>
          <reuseForks>false</reuseForks>
          <argLine>-Xmx2048m -XX:+HeapDumpOnOutOfMemoryError -Djava.net.preferIPv4Stack=true -Dorg.apache.avro.SERIALIZABLE_PACKAGES=org.apache.hadoop.io,org.apache.hadoop.fs --add-opens=java.base/java.lang.reflect=ALL-UNNAMED ${test.instrumentation.opts}</argLine>
          <environmentVariables>
            <HADOOP_COMMON_HOME>${hadoop.common.build.dir}</HADOOP_COMMON_HOME>
            <!-- HADOOP_HOME required for tests on Windows to find winutils -->
            <HADOOP_HOME>${hadoop.common.build.dir}</HADOOP_HOME>
            <LD_LIBRARY_PATH>${env.LD_LIBRARY_PATH}:${project.build.directory}/native/target/usr/local/lib:${hadoop.common.build.dir}/native/target/usr/local/lib</LD_LIBRARY_PATH>
            <DYLD_LIBRARY_PATH>${env.DYLD_LIBRARY_PATH}:${project.build.directory}/native/target/usr/local/lib:${hadoop.common.build.dir}/native/target/usr/local/lib</DYLD_LIBRARY_PATH>
            <MALLOC_ARENA_MAX>4</MALLOC_ARENA_MAX>

            <!--
              Disable the servlet instrumentation for now, because the TestAuthenticationFilter
              uses Mockito.verifyNoMoreInteractions(<HttpServletResponse mocks>), and OpenTelemetry
              does interact with HttpServletResponse(s).

              Another solution might be to tell Otel to not instrument Mockito mocked classes, if it can recognize them
            -->
            <OTEL_INSTRUMENTATION_SERVLET_ENABLED>false</OTEL_INSTRUMENTATION_SERVLET_ENABLED>
            <OTEL_INSTRUMENTATION_LOG4J_APPENDER_ENABLED>false</OTEL_INSTRUMENTATION_LOG4J_APPENDER_ENABLED>
          </environmentVariables>
          <systemPropertyVariables>
            <hadoop.log.dir>${hadoop.log.dir}</hadoop.log.dir>
            <hadoop.tmp.dir>${hadoop.tmp.dir}</hadoop.tmp.dir>

            <test.build.dir>${test.build.dir}</test.build.dir>
            <test.build.data>${test.build.data}</test.build.data>
            <test.build.webapps>${test.build.webapps}</test.build.webapps>
            <test.cache.data>${test.cache.data}</test.cache.data>
            <test.build.classes>${project.build.directory}/test-classes</test.build.classes>

            <java.security.krb5.conf>${project.build.directory}/test-classes/krb5.conf</java.security.krb5.conf>
            <java.security.egd>${java.security.egd}</java.security.egd>
            <!--require.test.libhadoop>${require.test.libhadoop}</require.test.libhadoop-->

            <java.util.logging.manager>org.apache.logging.log4j.jul.LogManager</java.util.logging.manager>
          </systemPropertyVariables>
          <properties>
            <!-- set a default timeout of 10 minutes to all tests -->
            <configurationParameters>
              junit.jupiter.execution.timeout.default = 10m
            </configurationParameters>
          </properties>
          <workingDirectory>${project.build.directory}/workdir/hadoop-common-project/hadoop-common</workingDirectory>
          <includes>
            **/hadoop/fs/**
          </includes>
          <excludes>
            **/hdfs/**,
          </excludes>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
